--- a/index.html
+++ b/index.html
@@ -1,68 +1,20 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trap energy distribution in aircraft dielectric materials through surface potential decay method</title>
-    <style>
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 20px;
-            background-color: #f9f9f9;
-            color: #333;
-        }
-        .container {
-            max-width: 600px;
-            margin: 0 auto;
-            background: #fff;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-        }
-        h1 {
-            font-size: 1.5em;
-            color: #1a5276;
-            border-left: 4px solid #2e86ab;
-            padding-left: 10px;
-        }
-        p {
-            margin-bottom: 1.5em;
-            text-align: justify;
-        }
-        .btn {
-            display: block;
-            width: 80%;
-            margin: 30px auto;
-            padding: 12px;
-            text-align: center;
-            background-color: #2e86ab;
-            color: white;
-            text-decoration: none;
-            border-radius: 6px;
-            font-size: 1.1em;
-            font-weight: bold;
-            transition: background-color 0.3s;
-        }
-        .btn:hover {
-            background-color: #1a5276;
-        }
-        .note {
-            font-size: 0.9em;
-            color: #666;
-            text-align: center;
-        }
-    </style>
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="ÄãµÄ±êÌâ£¨Èç£º×îĞÂ¿ÆÑĞ½øÕ¹£©" />
+    <meta property="og:description" content="ÄãµÄÃèÊö£¨Èç£ºµã»÷²é¿´ÏêÏ¸ÄÚÈİ£©" />
+    <meta property="og:image" content="https://ÄãµÄÓÃ»§Ãû.github.io/images/thumbnail.jpg" />
+    <meta property="og:url" content="https://ÄãµÄÓÃ»§Ãû.github.io/preview.html" />
+    <meta property="og:type" content="website" />
+    
+    <!-- ×Ô¶¯Ìø×ªµ½Ä¿±êÁ´½Ó -->
+    <meta http-equiv="refresh" content="0;url=https://www.sciencedirect.com/science/article/pii/S0304388625001536">
 </head>
 <body>
-    <div class="container">
-        <h1>Trap energy distribution in aircraft dielectric materials through surface potential decay method</h1>
-        <p>Charge deposition on aircraft insulation material surfaces is challenging to discharge via electrostatic discharger, potentially leading to streamer discharge and interference with avionic systems. To mitigate this risk and enhance flight safety, a quantitative understanding of charge trap distributions in these materials is essential. Three common aircraft dielectric materialsâ€”fiberglass epoxy, silicon carbide, and epoxy resinâ€”were selected to conduct surface potential decay experiments. By systematically analyzing the potential decay characteristics of these materials under two corona charging polarities, their electron and hole trap distribution parameters were accurately determined. The results demonstrate that fiberglass epoxy exhibits predominant deep traps (1.025 eV) for both electrons and holes with high density (>7 Ã— 1019 mâˆ’3), leading to significantly slower potential decay (Ï„10 % > 7000 s) and stronger charge binding capacity. Silicon carbide possesses dominant shallow electron traps (0.95 eV, 1.8 Ã— 1020 mâˆ’3) resulting in faster decay (Ï„10 % < 2000 s). Epoxy resin also features primarily shallow traps for both carriers (0.93â€“0.96 eV), with decay times exceeding 3200 s. These distinct trap distribution characteristics (energy, density, and dominance of shallow/deep levels) arise from inherent material microstructural differences (e.g., polar groups, crystalline defects, interfacial structures) and directly govern their charge accumulation and dissipation dynamics in specific aircraft applications (radomes, engine components, structural parts). The findings provide quantitative data for optimizing aircraft dielectric material selection and electrostatic protection design.</p>
-        <p>ç‚¹å‡»ä¸‹æ–¹æŒ‰é’®ï¼Œç›´è¾¾ScienceDirecté˜…è¯»å®Œæ•´è®ºæ–‡ã€‚</p>
-        <!-- è¯·æ³¨æ„ï¼šä¸‹é¢è¿™è¡Œä»£ç ä¸­çš„é“¾æ¥å°±æ˜¯ä½ æä¾›çš„åŸå§‹è®ºæ–‡é“¾æ¥ -->
-        <a href="https://www.sciencedirect.com/science/article/pii/S0304388625001536" class="btn">ç‚¹å‡»æŸ¥çœ‹å®Œæ•´è®ºæ–‡</a>
-        <p class="note">ç‚¹å‡»æŒ‰é’®åå°†è·³è½¬è‡³å¤–éƒ¨å­¦æœ¯å¹³å°</p>
+    <!-- Òş²ØµÄËõÂÔÍ¼£¨¿ÉÑ¡£© -->
+    <div style="display:none;">
+        <img src="images/thumbnail.jpg" alt="Ô¤ÀÀÍ¼">
     </div>
 </body>
 </html>
