--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta property="og:title" content="你的标题（如：最新科研成果）" />
+    <meta property="og:description" content="你的描述（如：点击查看详细内容）" />
+    <meta property="og:image" content="https://chdo1.github.io/github.io/images/thumbnail.jpg" />
+    <meta property="og:url" content="https://chdo1.github.io/github.io/" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trap energy distribution in aircraft dielectric materials through surface potential decay method</title>
     <style>
