--- a/index.html
+++ b/index.html
@@ -2,12 +2,30 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <meta property="og:title" content="你的标题（如：最新科研成果）" />
-    <meta property="og:description" content="你的描述（如：点击查看详细内容）" />
-    <meta property="og:image" content="https://chdo1.github.io/github.io/images/thumbnail.jpg" />
-    <meta property="og:url" content="https://chdo1.github.io/github.io/" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trap energy distribution in aircraft dielectric materials through surface potential decay method</title>
+
+    <!-- ---- Open Graph 标签 ---- -->
+    <!-- 微信会抓取这些标签来生成预览卡片 -->
+    <title>Trap energy distribution in aircraft dielectric materials through surface potential decay method</title> <!-- 页面标题 -->
+    <meta name="description" content="了解飞机介电材料中的陷阱能级分布，以及如何通过表面电位衰减法进行研究，以提高飞行安全。" /> <!-- 页面描述 -->
+
+    <!-- 请将下面这个图片 URL 替换成您上传到 GitHub Pages 的图片 URL -->
+    <!-- 建议图片尺寸 1200x630 像素，比例 1.91:1 -->
+    <meta property="og:image" content="https://chdo1.github.io/github.io/images/your-preview-image.jpg" />
+
+    <meta property="og:title" content="飞机介电材料的陷阱能级分布研究" /> <!-- 朋友圈卡片上显示的标题 -->
+    <meta property="og:description" content="这是一篇关于飞机绝缘材料电荷管理和飞行安全的重要研究，利用表面电位衰减法深入分析了陷阱能级分布。" /> <!-- 朋友圈卡片上显示的描述 -->
+    <meta property="og:url" content="https://chdo1.github.io/github.io/" /> <!-- 您要分享的GitHub Pages链接 -->
+    <meta property="og:type" content="article" /> <!-- 内容类型，article表示文章 -->
+    <meta property="og:site_name" content="chdo1的科研分享" /> <!-- 您的网站名称，可以自定义 -->
+
+    <!-- Twitter Card 标签 (可选，但建议添加，有些平台会识别) -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="飞机介电材料的陷阱能级分布研究">
+    <meta name="twitter:description" content="这是一篇关于飞机绝缘材料电荷管理和飞行安全的重要研究，利用表面电位衰减法深入分析了陷阱能级分布。">
+    <meta name="twitter:image" content="https://chdo1.github.io/github.io/images/your-preview-image.jpg"> <!-- 再次指定图片URL -->
+
+    <!-- ---- 原始的 CSS 和其他 meta 标签 ---- -->
     <style>
         * {
             margin: 0;
@@ -183,6 +201,8 @@
             }
         }
     </style>
+    <!-- ---- 引入了 Open Graph 标签 ---- -->
+    <link rel="canonical" href="https://chdo1.github.io/github.io/" /> <!-- 规范化链接 -->
 </head>
 <body>
     <div class="container">
@@ -206,10 +226,9 @@
             <a href="https://www.sciencedirect.com/science/article/pii/S0304388625001536" class="btn">View Full Paper on ScienceDirect</a>
         </div>
         
-        <p class="note">You will be redirected to the ScienceDirect platform</p>
         
         <div class="journal-info">
-            Published in: Journal of Electrostatics | Available online 20 May 2025
+            Published in: Journal of Electrostatics | Available online 30 September 2025
         </div>
     </div>
 </body>
