--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- 请将下面这个图片 URL 替换成您上传到 GitHub Pages 的图片 URL -->
     <!-- 建议图片尺寸 1200x630 像素，比例 1.91:1 -->
-    <meta property="og:image" content="https://chdo1.github.io/github.io/images/your-preview-image.jpg" />
+    <meta property="og:image" content="https://chdo1.github.io/github.io/images/daodan.jpg" />
 
     <meta property="og:title" content="飞机介电材料的陷阱能级分布研究" /> <!-- 朋友圈卡片上显示的标题 -->
     <meta property="og:description" content="这是一篇关于飞机绝缘材料电荷管理和飞行安全的重要研究，利用表面电位衰减法深入分析了陷阱能级分布。" /> <!-- 朋友圈卡片上显示的描述 -->
