--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:image" content="https://via.placeholder.com/1200x630/1a5276/ffffff?text=Aircraft+Dielectric+Research">
     <meta property="og:url" content="https://chdo1.github.io/github.io/">
     <meta property="og:type" content="article">
-    <meta property="og:site_name" content="电静力学杂志">
+    <meta property="og:site_name" content="静电杂志">
     
     <!-- 微信专用标签 -->
     <meta property="wechat:card" content="summary_large_image">
