--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- 核心Open Graph标签 -->
     <meta property="og:title" content="飞机介电材料陷阱能级分布研究 - 表面电位衰减方法">
     <meta property="og:description" content="研究飞机绝缘材料表面电荷沉积问题，通过表面电位衰减方法分析陷阱能级分布，提升飞行安全">
-    <meta property="og:image" content="https://via.placeholder.com/1200x630/1a5276/ffffff?text=Aircraft+Dielectric+Research">
+    <meta property="og:image" content="https://chdo1.github.io/github.io/images/aircraft_research.jpg">
     <meta property="og:url" content="https://chdo1.github.io/github.io/">
     <meta property="og:type" content="article">
     <meta property="og:site_name" content="静电杂志">
@@ -16,13 +16,13 @@
     <meta property="wechat:card" content="summary_large_image">
     <meta property="wechat:title" content="飞机介电材料陷阱能级分布研究">
     <meta property="wechat:description" content="表面电位衰减方法在航空绝缘材料电荷陷阱分析中的应用">
-    <meta property="wechat:image" content="https://via.placeholder.com/1200x630/1a5276/ffffff?text=Aircraft+Dielectric+Research">
+    <meta property="wechat:image" content="https://chdo1.github.io/github.io/images/aircraft_research.jpg">
     
     <!-- Twitter卡片（备用） -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="飞机介电材料陷阱能级分布研究">
     <meta name="twitter:description" content="研究飞机绝缘材料表面电荷沉积问题">
-    <meta name="twitter:image" content="https://via.placeholder.com/1200x630/1a5276/ffffff?text=Aircraft+Dielectric+Research">
+    <meta name="twitter:image" content="https://chdo1.github.io/github.io/images/aircraft_research.jpg">
     
     <!-- 其他重要meta标签 -->
     <meta name="description" content="研究飞机绝缘材料表面电荷沉积问题，通过表面电位衰减方法分析陷阱能级分布">
